# Project-Forge

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.ko.md  README.md  pyproject.toml  requirements.txt
.claude/commands/: verify.md
.github/workflows/: ci.yml  publish.yml
docs/: IDEA_NOTES.md  MIGRATION_LOG.md
docs/architecture/: ARCHITECTURE_v0.1.md  ARCHITECTURE_v0.2.md
docs/prd/: PRD_v0.1.md  PRD_v0.2.md  PRD_v1.0.md  PRD_v2.0.md
docs/trd/: TRD_v0.2.md
forge/: __init__.py  cli.py  config.py
forge/core/: circuit_breaker.py  context.py  dedup.py  directive.py  embedding.py  hashing.py  matcher.py  output_analyzer.py  promote.py  qvalue.py
forge/engines/: agent_manager.py  debate.py  detect.py  extractor.py  fitness.py  ingest.py  measure.py  metrics_v5.py  optimizer.py  prompt_optimizer.py  recommend.py  research_v5.py  resume.py  routing.py  sweep.py  transcript.py  writeback.py
forge/extras/: __init__.py  ablation.py  dedup.py  directive_extractor.py  optimizer.py
forge/hooks/: install.py
forge/hooks/templates/: detect.sh  resume.sh  teammate.sh  writeback.sh
forge/storage/: db.py  models.py  queries.py
tests/: conftest.py  test_agent_manager.py  test_circuit_breaker.py  test_context.py  test_detect.py  test_directive.py  test_e2e_pipeline.py  test_edge_cli.py  test_edge_core.py  test_edge_engines.py  test_edge_storage.py  test_experiment.py  test_fitness.py  test_hashing.py  test_matcher.py  test_measure.py  test_metrics_v5.py  test_optimizer.py  test_output_analyzer.py  test_promote.py  test_prompt_optimizer.py  test_quality_fixes.py  test_queries.py  test_qvalue.py  test_recommend.py  test_research_v5.py  test_resume.py  test_routing.py  test_v1_context.py  test_v1_db.py  test_v1_extractor.py  test_v1_ingest.py  test_v1_queries.py  test_v1_resume.py  test_v2_debate.py  test_v2_meta.py  test_v2_output_analyzer.py  test_v5_optimization.py  test_v5_wiring_e2e.py  test_wave3_integration.py  (+2 more)
tests/fixtures/: sample_transcript.jsonl
