[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project-forge"
version = "1.2.0"
description = "Experience learning CLI for coding agents"
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
]
vector = [
    "sqlite-vec>=0.1.0",
    "sentence-transformers>=2.0",
]
llm = [
    "anthropic>=0.30",
]
all = [
    "sqlite-vec>=0.1.0",
    "sentence-transformers>=2.0",
    "anthropic>=0.30",
]

[project.scripts]
forge = "forge.cli:app"

[tool.setuptools.package-data]
forge = [
    "hooks/templates/*.sh",
    "skills/*/SKILL.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
