[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forge-memory"
version = "1.2.0"
description = "Experience memory layer for coding agents — learn from mistakes, inject proven fixes"
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
authors = [{name = "gksl5355"}]
keywords = ["cli", "coding-agent", "experience-learning", "claude-code", "reinforcement-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.12",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/gksl5355/Project-Forge"
Repository = "https://github.com/gksl5355/Project-Forge"
Issues = "https://github.com/gksl5355/Project-Forge/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
]
vector = [
    "sqlite-vec>=0.1.0",
    "sentence-transformers>=2.0",
]
llm = [
    "anthropic>=0.30",
]
all = [
    "sqlite-vec>=0.1.0",
    "sentence-transformers>=2.0",
    "anthropic>=0.30",
]

[project.scripts]
forge = "forge.cli:app"

[tool.setuptools.package-data]
forge = [
    "hooks/templates/*.sh",
    "skills/*/SKILL.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
